--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,21 @@
     <title>Tanks.vn</title>
   </head>
   <body>
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12&appId=414530842296220&autoLogAppEvents=1';
+      fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <div id="footer">Rolled out by Tanks.vn team</div>
+  <div style="width: 100%;text-align: center;">
+    <div class="fb-page" data-href="https://www.facebook.com/tanksvn/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/tanksvn/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/tanksvn/">Tanks.vn</a></blockquote></div>
+  </div>
+  <div id="footer">Rolled out by Tanks.vn team</div>
   </body>
 </html>
